# cryptolens-cpp-tests

./: COMMANDS.md  LICENSE.md  README.md
cmake/afl/: CMakeLists.txt
cmake/chaos_curl/: CMakeLists.txt
cmake/chaos_openssl/: CMakeLists.txt
cmake/cryptolens/: CMakeLists.txt
cmake/gtest/: CMakeLists.txt
dockerfiles/cryptolens-cpp-tests/: Dockerfile
include/cryptolens/imports/curl/: curl.h
include/cryptolens/tests/: Configuration_fuzz.hpp  SignatureVerifier_AlwaysAccept.hpp  core.hpp  gtest_shared.hpp
include/cryptolens/tests/override/curl/: inputs.h  inputs.hpp
src/: core.cpp
src/afl/: fuzz_activate.cpp  fuzz_activate_floating.cpp  fuzz_inputs.cpp  fuzz_make_license_key.cpp
src/chaos/: cryptoapi_activate.cpp  curl_activate_external.cpp  openssl_activate_external.cpp  winhttp_activate.cpp
src/gtest/: tests.cpp  tests_main.cpp
src/override/curl/: chaos.cpp  inputs.c  inputs.cpp
src/override/openssl/: chaos.cpp  malloc.cpp  touch.cpp
util/: create.py  gen.py
